# aworld

./: Cargo.toml  flake.nix
src/: c.rs  main.rs  soul.rs  world.rs
